--- a/GatewayNode/.project
+++ b/GatewayNode/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Gateway_Node</name>
+	<name>GateWay_Node</name>
 	<comment></comment>
 	<projects>
 	</projects>
